fixes position fixed elements jumping on vh change on mobile

--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -3,7 +3,7 @@
 
 	padding-inline: $very-large;
 
-	text-shadow: 0 0 4px #000;
+	//text-shadow: 0 0 4px #000;
 
 	@media screen and (max-width: $breakpoint-tablet) {
 		padding-inline: $large;
@@ -26,9 +26,11 @@
 
 	.background {
 		@include fixed(0, 0, auto, auto);
-		@include size(100%, 100%);
+		@include size(100%, 100vh);
 
-		opacity: 0.3;
+		transform: translate3d(0, 0, 0);
+
+		opacity: 0.1;
 		z-index: -1;
 
 		background-image: url("/img/titlebg.webp");
@@ -36,6 +38,6 @@
 		background-repeat: no-repeat;
 		background-size: cover;
 
-		filter: blur(10px);
+		filter: blur(2px);
 	}
 }
